<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_toolbar_signing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_signing"
            layout="@layout/toolbar_signing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/page_margin"
        android:layout_marginRight="@dimen/page_margin"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/img_shop_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp26"
            android:gravity="center_horizontal"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:id="@+id/rel_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_shop_logo"
            android:layout_margin="@dimen/page_margin">


            <com.sapl.distributormsdpharma.customView.CustomEditTextMedium
                android:id="@+id/edt_username"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:drawableLeft="@android:drawable/ic_menu_upload"
                android:hint="@string/enter_user_name"
                android:text="1234567890"
                android:textSize="@dimen/sp16" />

            <com.sapl.distributormsdpharma.customView.CustomUnderLine
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/edt_username" />


            <com.sapl.distributormsdpharma.customView.CustomEditTextMedium
                android:id="@+id/edt_client_id"
                android:layout_below="@+id/edt_username"
                android:layout_marginTop="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:drawableLeft="@android:drawable/ic_menu_info_details"
                android:hint="@string/enter_client_id"
                android:text="1"
                android:inputType="number"
                android:textSize="@dimen/sp16" />

            <com.sapl.distributormsdpharma.customView.CustomUnderLine
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/edt_client_id" />


            <com.sapl.distributormsdpharma.customView.CustomEditTextMedium
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_client_id"
                android:layout_marginTop="@dimen/dp10"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:hint="@string/enter_password"
                android:text="sman"
                android:inputType="textPassword"
                android:textSize="@dimen/sp16"
                android:textStyle="normal" />

            <com.sapl.distributormsdpharma.customView.CustomUnderLine
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/edt_password" />


            <com.sapl.distributormsdpharma.customView.CustomTextViewRegular
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/edt_password"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/forgot_password"
                android:textColor="@color/heading_background"
                android:textSize="@dimen/sp14" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_data"
            android:layout_marginLeft="@dimen/page_margin"
            android:layout_marginRight="@dimen/page_margin">

            <com.sapl.distributormsdpharma.customView.CustomButtonRegular
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/card_text_size" />

            <com.sapl.distributormsdpharma.customView.CustomTextViewRegular
                android:id="@+id/txt_sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btn_login"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/sign_up_link"
                android:textColor="@color/heading_background"
                android:textSize="@dimen/sp14"
                android:visibility="gone"/>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>